Fix mate and wrap bugs

--- a/YStemAndChess/src/app/pages/board-analyzer/board-analyzer.component.scss
+++ b/YStemAndChess/src/app/pages/board-analyzer/board-analyzer.component.scss
@@ -75,6 +75,7 @@
 
     #move-list {
         display: flex;
+        flex-wrap: wrap;
     }
 
     .ply {
